created basic nav header

--- a/backend/src/views/_partials/header.ejs
+++ b/backend/src/views/_partials/header.ejs
@@ -1,1 +1,15 @@
-<header class="text-4xl">Planet Rebase Central!</header>
+<header class="bg-gray-900 sm:flex sm:justify-between sm: items-center sm:px-4 sm:py-3">
+    <div class="flex items-center justify-between px-4 py-3 sm:p-0">
+        <div>
+            <a class="block px-2 py-1 hover:bg-gray-800 text-white" href="/">Home</a>
+        </div>
+        <div class="sm:hidden">
+            <button data-js="menuBtn" class="block text-gray-500 focus:text-white hover:text-white focus:outline-none">menu</button>
+        </div>
+    </div>
+    <div data-js="menuDrawer" class="px-2 pt-2 pb-4 sm:flex sm:p-0">
+        <a href="#" class="block px-2 py-1 text-white font-semibold hover:bg-gray-800">User</a>
+        <a href="#" class="mt-1 block px-2 py-1 text-white font-semibold hover:bg-gray-800 sm:mt-0 sm:ml-2">Settings</a>
+        <a href="#" class="mt-1 block px-2 py-1 text-white font-semibold hover:bg-gray-800 sm:mt-0 sm:ml-2">Logout</a>
+    </div>
+</header>
