removed some text in data-js elements and added in-line styles because bad programmer

--- a/backend/src/views/site_status/site_status_report.ejs
+++ b/backend/src/views/site_status/site_status_report.ejs
@@ -1,6 +1,6 @@
 <div class="container mx-auto">
-    <div style="height: 400px" id="mapid"></div>
-    <h1 data-js="site_id">Site Id: <%= site_id %></h1>
+    <div style="height: 400px; margin: 20px" id="mapid"></div>
+    <h1 data-js="site_id"><%= site_id %></h1>
     <h2>Site Info:</h2>
     <ul>
         <li>Site Name: <%= site_name %></li>
