--- a/backend/src/views/_partials/header.ejs
+++ b/backend/src/views/_partials/header.ejs
@@ -1,15 +1,55 @@
-<header class="bg-gray-900 sm:flex sm:justify-between sm: items-center sm:px-4 sm:py-3">
-    <div class="flex items-center justify-between px-4 py-3 sm:p-0">
-        <div>
-            <a class="block px-2 py-1 hover:bg-gray-800 text-white" href="/">Home</a>
-        </div>
-        <div class="sm:hidden">
-            <button data-js="menuBtn" class="block text-gray-500 focus:text-white hover:text-white focus:outline-none">menu</button>
-        </div>
+<header
+  class="bg-gray-900 sm:flex sm:justify-between sm: items-center sm:px-4 sm:py-3"
+>
+  <div class="flex items-center justify-between px-4 py-3 sm:p-0">
+    <div>
+      <a class="block px-2 py-1 hover:bg-gray-800 text-white" href="/">Home</a>
     </div>
-    <div data-js="menuDrawer" class="px-2 pt-2 pb-4 sm:flex sm:p-0">
-        <a href="#" class="block px-2 py-1 text-white font-semibold hover:bg-gray-800">User</a>
-        <a href="#" class="mt-1 block px-2 py-1 text-white font-semibold hover:bg-gray-800 sm:mt-0 sm:ml-2">Settings</a>
-        <a href="#" class="mt-1 block px-2 py-1 text-white font-semibold hover:bg-gray-800 sm:mt-0 sm:ml-2">Logout</a>
+    <div class="sm:hidden">
+      <button
+        data-js="menuBtn"
+        class="block text-gray-500 focus:text-white hover:text-white focus:outline-none"
+      >
+        menu
+      </button>
     </div>
+  </div>
+  <div data-js="menuDrawer" class="px-2 pt-2 pb-4 sm:flex sm:p-0">
+    <div
+      class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in"
+    >
+      <input
+        data-js="theme_switcher"
+        type="checkbox"
+        name="toggle"
+        id="toggle"
+        class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"
+      />
+      <label
+        for="toggle"
+        class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"
+      ></label>
+    </div>
+    <label
+      data-js="theme_switcher_label"
+      for="toggle"
+      class="text-xs text-gray-700"
+      >Light</label
+    >
+    <a
+      href="#"
+      class="block px-2 py-1 text-white font-semibold hover:bg-gray-800"
+      >User</a
+    >
+    <a
+      href="#"
+      class="mt-1 block px-2 py-1 text-white font-semibold hover:bg-gray-800 sm:mt-0 sm:ml-2"
+      >Settings</a
+    >
+    <a
+      href="#"
+      class="mt-1 block px-2 py-1 text-white font-semibold hover:bg-gray-800 sm:mt-0 sm:ml-2"
+      >Logout</a
+    >
+  </div>
 </header>
