--- a/backend/src_2/views/layouts/full_width_layout.ejs
+++ b/backend/src_2/views/layouts/full_width_layout.ejs
@@ -10,7 +10,7 @@
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
       crossorigin=""
     />
-    <link rel="stylesheet" href="tailwind.css" />
+    <link rel="stylesheet" href="build/tailwind.css" />
     <!-- Hello from layout -->
   </head>
   <body>
