--- a/backend/src_2/views/site_status/site_status_report.ejs
+++ b/backend/src_2/views/site_status/site_status_report.ejs
@@ -44,4 +44,4 @@
   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
   crossorigin=""
 ></script>
-<script src="index.js"></script>
+<script src="js/site_status.js"></script>
