--- a/backend/src/views/index.ejs
+++ b/backend/src/views/index.ejs
@@ -11,7 +11,7 @@
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <!-- <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28"> -->
-        <span>PR</span>
+        <span><i class="fas fa-home"></i></span>
       </a>
   
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -25,7 +25,7 @@
       <div class="navbar-start">
   
         <a class="navbar-item">
-          Documentation
+          Docs
         </a>
   
         <div class="navbar-item has-dropdown is-hoverable">
@@ -92,5 +92,6 @@
           </div>
         </div>
       </section>
+      <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
 </body>
 </html>
