--- a/backend/src/views/site_status_report.ejs
+++ b/backend/src/views/site_status_report.ejs
@@ -17,7 +17,7 @@
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <!-- <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28"> -->
-        <span>PR</span>
+        <span><i class="fas fa-home"></i></span>
       </a>
   
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -31,7 +31,7 @@
       <div class="navbar-start">
   
         <a class="navbar-item">
-          Documentation
+          Docs
         </a>
   
         <div class="navbar-item has-dropdown is-hoverable">
@@ -57,6 +57,9 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
+            <a class="button is-danger is-outlined">
+              Report Issue
+            </a>
             <a class="button is-primary">
               <strong>Log in</strong>
             </a>
@@ -66,70 +69,68 @@
     </div>
   </nav>
     <section class="section">
-        <div class="container">
-          <h1 class="title">
-            Site Id: <span data-js="site_id"><a><%= site_id %></a></span>
-          </h1>
-          <p class="subtitle">
-            <%= site_name %>
-          </p>
-          <div class="has-background-dark p-2">
-            <div style="height: 400px" class="as-background-dark" id="mapid"></div>
-          </div>
-        
-          <div class="tabs is-centered">
-            <ul>
-              <li class="is-active"><a>Summary</a></li>
-              <li><a>Attributes</a></li>
-              <li><a>Tickets</a></li>
-              <li><a>Alarms</a></li>
-              <li><a>Performance</a></li>
-            </ul>
-          </div>
-          <div class="columns">
-            <div class="column">
-              <p><%=site_type %></p>
-              Link type: <span><%= link_type %></span>
+            <div class="container">
+              <h1 class="title">
+                Site Id: <span data-js="site_id"><a><%= site_id %></a></span>
+              </h1>
+              <p class="subtitle">
+                <%= site_name %>
+              </p>
+              <div class="has-background-dark p-2 is-hidden">
+                <div style="height: 400px" class="as-background-dark" id="mapid"></div>
+              </div>
+              <div class="columns">
+                <div class="column">
+                  <p><%=site_type %></p>
+                  <span><%= link_type %></span>
+                </div>
+                <div class="column">
+              <ul>
+                <li>Site Name: <%= site_name %></li>
+                <li>Site Type: <%= site_type %></li>
+                <li>Address: <%= location.address %></li>
+                <li>City: <%= location.city %></li>
+                <li>Planet: <%= location.planet %></li>
+                <li data-js="site_lat"><%= location.lat %></li>
+                <li data-js="site_long"><%= location.long %></li>
+              </ul>
             </div>
             <div class="column">
-          <ul>
-            <li>Site Name: <%= site_name %></li>
-            <li>Site Type: <%= site_type %></li>
-            <li>Address: <%= location.address %></li>
-            <li>City: <%= location.city %></li>
-            <li>Planet: <%= location.planet %></li>
-            <li data-js="site_lat"><%= location.lat %></li>
-            <li data-js="site_long"><%= location.long %></li>
-          </ul>
-        </div>
-        <div class="column">
-          <ul>
-            <% for (const [key, value] of Object.entries(related_sites)) { %>
-            <li><%= key %>: <%= value %></li>
-            <% } %>
-          </ul>
-        </div>
-        <div class="column">
-          <ul>
-            <% tech.forEach(function(t){ %>
-            <li><%= t %></li>
-            <% }) %>
-          </ul>
-        </div>
+              <ul>
+                <% for (const [key, value] of Object.entries(related_sites)) { %>
+                <li><%= key %>:<a> <%= value %></a></li>
+                <% } %>
+              </ul>
+            </div>
+            <div class="column">
+              <ul>
+                <% tech.forEach(function(t){ %>
+                <li><%= t %></li>
+                <% }) %>
+              </ul>
+            </div>
+              </div>
+              <div class="tabs is-centered">
+                <ul>
+                  <li><a>Summary</a></li>
+                  <li class="is-active"><a>Attributes</a></li>
+                  <li><a>Tickets</a></li>
+                  <li><a>Alarms</a></li>
+                  <li><a>Map</a></li>
+                  <li><a>Performance</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
       </section>
-      <form action="#">
-        <button class="button is-warning">Report Issue</button>
-      </form>
 
       <script
   src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
   crossorigin=""
 ></script>
+<script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
 
 <script>
     let site_id = document.querySelector('[data-js="site_id"]').innerHTML;
