--- a/backend/src/views/index.ejs
+++ b/backend/src/views/index.ejs
@@ -1,97 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-</head>
-<body>
-  <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <!-- <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28"> -->
-        <span><i class="fas fa-home"></i></span>
-      </a>
-  
-      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-  
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-  
-        <a class="navbar-item">
-          Docs
-        </a>
-  
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">
-            More
-          </a>
-  
-          <div class="navbar-dropdown">
-            <a class="navbar-item">
-              About
-            </a>
-            <a class="navbar-item">
-              Contact
-            </a>
-            <hr class="navbar-divider">
-            <a class="navbar-item">
-              Report an issue
-            </a>
-          </div>
-        </div>
-      </div>
-  
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary">
-              <strong>Log in</strong>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
-    <section class="section">
-        <div class="container">
-          <h1 class="title">
-            Site Status
-          </h1>
-          <p class="subtitle">
-            Created for <strong>Planet Rebase LLC</strong>!
-          </p>
-          <form action="/site_status" method='POST'>
-            <div class="columns">
-              <div class="column">
-                <div class="field">
-                  <div class="control">
-                    <input 
-                    class="input" 
-                    placeholder="6 Digit Site Id"
-                    type="number"
-                    id="site_id"
-                    name="site_id"
-                    required
-                    min="100000"
-                    max="999999"
-                    >
-                  </div>
-                </div>
-              </div>
-              <div class="column is-four-fifths">
-                <button type="submit" class="button is-light">Search</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-      <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-</body>
-</html>
+
+    <h1>Planet Rebase - Central</h1>
+    <p>Welcome to the <%= title %> page</p>
