added a target=_blank to the tower 360 form submit

--- a/backend/src/views/pages/tower_360/tower_360.ejs
+++ b/backend/src/views/pages/tower_360/tower_360.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p style="font-size:100px">&#129409;</p>
-    <form action="<%= form_url %>" method="POST">
+    <form action="<%= form_url %>" method="POST" target='_blank'>
         <input type="text" name="site_id" id="site_id">
         <button type="submit">Search</button>
     </form>
