--- a/backend/src/views/pages/tower_360/tower_360.ejs
+++ b/backend/src/views/pages/tower_360/tower_360.ejs
@@ -1,3 +1,16 @@
+<section class="hero">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Tower 360
+        </h1>
+        <h2 class="subtitle">
+          Tickets, Maintenance, Status, Health-checks
+        </h2>
+      </div>
+    </div>
+  </section>
+  
 <div class="container">
     <section class="section">
         <div class="columns is-centered">
