--- a/backend/src/views/layouts/layout.ejs
+++ b/backend/src/views/layouts/layout.ejs
@@ -61,6 +61,7 @@
         </div>
     </nav>
     <%- body %>
+    <script src="../static/dist/index.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
 </body>
 </html>
