added tabbedSections object, methods

--- a/backend/src/views/pages/tower_360/tower_360_report.ejs
+++ b/backend/src/views/pages/tower_360/tower_360_report.ejs
@@ -50,9 +50,9 @@
             </div>
         </section>
 
-        <div data-js="sections">
+        <div data-js="tabbedSections">
             <!-- Summary -->
-            <section data-js="summarySection" class="section">
+            <section name="Summary" data-js="summarySection" class="section">
                 <div class="container">
                     <div class="level is-mobile">
                         <div class="level-item has-text-centered">
@@ -89,14 +89,14 @@
             </section>
 
             <!-- Details -->
-            <section data-js="detailsSection" class="section is-hidden">
+            <section name="Details" data-js="detailsSection" class="section is-hidden">
                 <div class="container">
-
+                    details
                 </div>
             </section>
 
             <!-- Tickets -->
-            <section data-js="ticketsSection" class="section is-hidden">
+            <section name="Tickets" data-js="ticketsSection" class="section is-hidden">
                 <div class="container">
                     <div class="table-container">
                         <table class="table is-hoverable">
@@ -401,7 +401,7 @@
             </section>
 
             <!-- Alarms -->
-            <section data-js="alarmsSection" class="section is-hidden">
+            <section name="Alarms" data-js="alarmsSection" class="section is-hidden">
                 <div class="container">
                     <div class="table-container">
                         <table class="table is-hoverable">
@@ -706,16 +706,16 @@
             </section>
 
             <!-- Map -->
-            <section data-js="mapSection" class="section is-hidden">
+            <section name="Map" data-js="mapSection" class="section is-hidden">
                 <div class="container">
-                    
+                    map
                 </div>
             </section>
 
             <!-- Performance -->
-            <section data-js="performanceSection" class="section is-hidden">
+            <section name="Performance" data-js="performanceSection" class="section is-hidden">
                 <div class="container">
-                    
+                    performance
                 </div>
             </section>
         </div>
