added leaflet for testing

--- a/backend/src/views/pages/tower_360/tower_360_report.ejs
+++ b/backend/src/views/pages/tower_360/tower_360_report.ejs
@@ -708,7 +708,7 @@
             <!-- Map -->
             <section name="Map" data-js="mapSection" class="section is-hidden">
                 <div class="container">
-                    map
+                    <div id="mapid"></div>
                 </div>
             </section>
 
