moved map to the top of report page, added a z-index -1 for fixed nav, also added a footer to give some breathing room

--- a/backend/src/views/pages/tower_360/tower_360_report.ejs
+++ b/backend/src/views/pages/tower_360/tower_360_report.ejs
@@ -2,6 +2,7 @@
         <!-- General Site Info -->
         <section class="section">
         <div class="container">
+            <div id="mapid"></div>
             <div class="columns">
                     <div class="column">
                         <h3 class="title is-3">General Info</h3>
@@ -43,7 +44,6 @@
                         <li><a>Details</a></li>
                         <li><a>Tickets</a></li>
                         <li><a>Alarms</a></li>
-                        <li><a>Map</a></li>
                         <li><a>Performance</a></li>
                     </ul>
                 </div>
@@ -730,12 +730,12 @@
                 </div>
             </section>
 
-            <!-- Map -->
+            <!-- Map
             <section name="Map" data-js="mapSection" class="section is-hidden">
                 <div class="container">
-                    <div id="mapid"></div>
+                    
                 </div>
-            </section>
+            </section> -->
 
             <!-- Performance -->
             <section name="Performance" data-js="performanceSection" class="section is-hidden">
@@ -745,3 +745,10 @@
             </section>
         </div>
 </div>
+
+<footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>See more cool stuff -></strong><a target="_blank" href="http://nicholassurmava.com">nicholassurmava.com</a>
+    </div>
+  </footer>
