added a weather section

--- a/backend/src/views/pages/tower_360/tower_360_report.ejs
+++ b/backend/src/views/pages/tower_360/tower_360_report.ejs
@@ -45,6 +45,7 @@
                         <li><a>Tickets</a></li>
                         <li><a>Alarms</a></li>
                         <li><a>Performance</a></li>
+                        <li><a>Weather</a></li>
                     </ul>
                 </div>
             </div>
@@ -741,6 +742,13 @@
             <section name="Performance" data-js="performanceSection" class="section is-hidden">
                 <div class="container">
                     <canvas id="myChart" width="400" height="400"></canvas>
+                </div>
+            </section>
+
+            <!-- Performance -->
+            <section name="Weather" data-js="weatherSection" class="section is-hidden">
+                <div class="container">
+                    
                 </div>
             </section>
         </div>
