added a button to refresh weather data

--- a/backend/src/views/pages/tower_360/tower_360_report.ejs
+++ b/backend/src/views/pages/tower_360/tower_360_report.ejs
@@ -745,10 +745,10 @@
                 </div>
             </section>
 
-            <!-- Performance -->
+            <!-- Weather -->
             <section name="Weather" data-js="weatherSection" class="section is-hidden">
                 <div class="container">
-                    
+                    <button class="button" data-js="getWeatherBtn">Refresh</button>
                 </div>
             </section>
         </div>
