changed out footer content

--- a/backend/src/views/pages/tower_360/tower_360_report.ejs
+++ b/backend/src/views/pages/tower_360/tower_360_report.ejs
@@ -756,7 +756,7 @@
 
 <footer class="footer">
     <div class="content has-text-centered">
-      <p>
-        <strong>See more cool stuff -></strong><a target="_blank" href="http://nicholassurmava.com">nicholassurmava.com</a>
+        <a href="<%= routes.index %>">Planet Rebase Inc.</a>
+        <p><strong>Created by </strong><a target="_blank" href="http://nicholassurmava.com">Nicholas Surmava</a></p>
     </div>
   </footer>
